# tradingbot

./: .editorconfig  .env.template  .gitignore  CLAUDE.md  Makefile  README.md  main.py  modal_app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_grok_api.py  test_json_utils.py  test_learning_system.py  test_news.py  test_setup.py  test_simulation.py
.claude/commands/: commit.md  fix.md  test.md  update-app.md
.gg/commands/: commit.md
.github/workflows/: ci.yml
agents/: __init__.py  base_agent.py  claude_agent.py  grok_agent.py
config/: __init__.py  alpaca_config.py  settings.py
data/: __init__.py  indicators.py  market_data.py  news.py
database/: __init__.py  json_utils.py  learning_store.py  postgres_client.py  schema.sql
execution/: __init__.py  order_executor.py
monitoring/: __init__.py  dashboard.html  dashboard.py  logger.py  scoreboard.py
reports/: __init__.py  competition_report.py
risk/: __init__.py  risk_manager.py
tests/: conftest.py
tests/integration/: __init__.py  test_decision_flow.py  test_learning_cycle.py  test_risk_enforcement.py
tests/unit/: test_base_agent.py  test_claude_agent.py  test_grok_agent.py  test_indicators.py  test_market_data.py  test_order_executor.py  test_risk_manager.py
tools/: __init__.py  analysis_tools.py  market_tools.py  news_tools.py  trading_tools.py
